# livecamera

./: .gitlab-ci.yml  .tool-versions  README.md  renovate.json
.github/workflows/: build.yml  docker-publish.yml
frontend/: .dockerignore  .env.development  .env.production  Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/src/pages/: index.tsx  room.tsx
frontend/src/socket/: client.ts  handler.ts
server/: .dockerignore  Cargo.toml  Dockerfile
server/src/: main.rs  room.rs  websocket.rs  worker.rs
