[package]
name = "livecamera"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.5"
actix-web = "4.9.0"
actix-web-actors = "4.3.0"
mediasoup = "0.17.1"
num_cpus = "1.16.0"
rand = "0.8.5"
serde = "1.0.215"
serde_json = "1.0.133"
tracing = "0.1.41"
tracing-actix-web = "0.7.15"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
