[package]
name = "livecamera"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rheomesh = "0.3.3"
actix = "0.13.5"
actix-web = "4.9.0"
actix-web-actors = "4.3.0"
rand = "0.8.5"
serde = "1.0.217"
serde_json = "1.0.138"
tracing = "0.1.41"
tracing-actix-web = "0.7.15"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio = "1.38.0"
webrtc = "0.12.0"

[dev-dependencies]
