[package]
name = "livecamera"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rheomesh = "0.3.5"
actix = "0.13.5"
actix-web = "4.11.0"
actix-web-actors = "4.3.1"
serde = "1.0.219"
serde_json = "1.0.140"
tracing = "0.1.41"
tracing-actix-web = "0.7.18"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio = "1.44.2"
webrtc = "0.12.0"

[dev-dependencies]
